--- a/src/styles/phone.css
+++ b/src/styles/phone.css
@@ -17,7 +17,7 @@
 
         .slide-one-big-text{
             width: 80%;
-            font-size: 55px;
+            font-size: 40px;
             padding-top: 20px;
             margin-left: 40px;
         }
@@ -29,6 +29,10 @@
 
         .slide-one-buttons{
             position: static;
+
+            a{
+                margin-left: 40px;
+            }
         }
     }
 
